[gd_scene load_steps=2 format=3 uid="uid://cehg30lre7fal"]

[ext_resource type="Script" path="res://Multi.gd" id="1_m67s4"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m67s4")
Address = null
port = null

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 12.0
offset_right = 127.0
offset_bottom = 27.0
text = "Host"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 136.0
offset_top = 12.0
offset_right = 244.0
offset_bottom = 27.0
text = "Join"

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 258.0
offset_top = 12.0
offset_right = 366.0
offset_bottom = 43.0
text = "Start"

[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
